gcc/testsuite/rust/rustc/ui/issues/issue-17001.rs
mod foo {}

fn main() {
    let p = foo { x: () }; // { dg-error ".E0574." "" { target *-*-* } }
}

